# SISR

./: README.md  install.sh  pyproject.toml  test_mech.txt  test_rxn.txt  uninstall.sh
examples/: LK_data.txt  LK_example.py  LK_main.py  LV_example.py  MM_example.py  MM_main.py  Nonlinear_data.txt  Nonlinear_example.py  Sequential_example.py  fit_data.txt  fitted_LK_data.txt  fitted_LV_data.txt  fitted_nonlinear_data.txt  linear_main.py  main_fit_only.py  mech_list.txt  nonlinear_main.py  rxn_list.txt  true_data.txt
examples/input_data/: MM_data.txt  Sequential_data.txt
python_venvs/SISR/: pyvenv.cfg
results/Lotka_Volterra/2/: error_list.txt  mech_list.txt
results/Lotka_Volterra/3/: mech_list.txt  rxn_list.txt
results/Lotka_Volterra/4/: error_list.txt  mech_list.txt
results/Lotka_Volterra/5/: mech_list.txt  rxn_list.txt
results/Lotka_Volterra/6/: error_list.txt  mech_list.txt
results/Lotka_Volterra/7/: mech_list.txt  rxn_list.txt
results/Michaelis_Menten/2/: error_list.txt  mech_list.txt
results/Michaelis_Menten/3/: error_list.txt  mech_list.txt
results/Michaelis_Menten/4/: error_list.txt
results/Michaelis_Menten/5/: error_list.txt  rxn_order.txt:Zone.Identifier
results/Nonlinear/2/: error_list.txt  mech_list.txt
results/Nonlinear/3/: error_list.txt  mech_list.txt
results/Nonlinear/4/: error_list.txt  mech_list.txt
results/Nonlinear/5/: error_list.txt  mech_list.txt
results/Sequential/2/: error_list.txt  mech_list.txt
results/Sequential/3/: mech_list.txt  rxn_list.txt
results/Sequential/4/: error_list.txt  mech_list.txt
results/Sequential/5/: mech_list.txt  rxn_list.txt
results/Sequential/6/: error_list.txt  mech_list.txt
src/: Genetic_Algorithm.py  Main.py  Reaction_Mechanism_Generator.py  __init__.py
src/SISR/: __init__.py  reaction_mechanism_generator.py
src/SISR.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_genetic_algorithm.py  test_reaction_mechanism_generator.py
